--- a/zlib_src/CMakeLists.txt
+++ b/zlib_src/CMakeLists.txt
@@ -247,3 +247,7 @@ if(HAVE_OFF64_T)
     target_link_libraries(minigzip64 zlib)
     set_target_properties(minigzip64 PROPERTIES COMPILE_FLAGS "-D_FILE_OFFSET_BITS=64")
 endif()
+
+if(CMAKE_SIZEOF_VOID_P EQUAL 8 AND MSVC)
+    set_target_properties(zlibstatic PROPERTIES STATIC_LIBRARY_FLAGS "/machine:x64")
+endif()
