--- a/libzip_src/lib/CMakeLists.txt
+++ b/libzip_src/lib/CMakeLists.txt
@@ -157,6 +157,7 @@ IF(NOT HAVE_MKSTEMP)
 ENDIF(NOT HAVE_MKSTEMP)
 
 ADD_LIBRARY(zip SHARED ${LIBZIP_SOURCES} ${LIBZIP_EXTRA_FILES})
+ADD_LIBRARY(zipstatic STATIC ${LIBZIP_SOURCES} ${LIBZIP_EXTRA_FILES})
 SET_TARGET_PROPERTIES(zip PROPERTIES VERSION 3.0 SOVERSION 3 )
 TARGET_LINK_LIBRARIES(zip ${ZLIB_LIBRARY})
 INSTALL(TARGETS zip
