--- a/libzip_src/lib/CMakeLists.txt
+++ b/libzip_src/lib/CMakeLists.txt
@@ -143,7 +143,7 @@ SET(LIBZIP_SOURCES
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}/..)
 
-# XXX: distribute instead?
+# TODO: distribute instead?
 #ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/zip_err_str.c
 #  COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/make_zip_err_str.sh
 #    ${CMAKE_CURRENT_SOURCE_DIR}/zip.h
@@ -157,7 +157,6 @@ IF(NOT HAVE_MKSTEMP)
 ENDIF(NOT HAVE_MKSTEMP)
 
 ADD_LIBRARY(zip SHARED ${LIBZIP_SOURCES} ${LIBZIP_EXTRA_FILES})
-ADD_LIBRARY(zipstatic STATIC ${LIBZIP_SOURCES} ${LIBZIP_EXTRA_FILES})
 SET_TARGET_PROPERTIES(zip PROPERTIES VERSION 3.0 SOVERSION 3 )
 TARGET_LINK_LIBRARIES(zip ${ZLIB_LIBRARY})
 INSTALL(TARGETS zip
